--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homebase - Task Management for Homemade</title>
-    <meta name="description" content="Internal task management platform for Homemade team" />
-    <meta name="author" content="Homemade" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Homebase - Task Management for Homemade" />
-    <meta property="og:description" content="Internal task management platform for Homemade team" />
-    <meta property="og:type" content="website" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <title>Homebase - Task Management for Homemade</title>
+  <meta name="description" content="Internal task management platform for Homemade team" />
+  <meta name="author" content="Homemade" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
 
-    <meta name="twitter:card" content="summary_large_image" />
-  </head>
+  <meta property="og:title" content="Homebase - Task Management for Homemade" />
+  <meta property="og:description" content="Internal task management platform for Homemade team" />
+  <meta property="og:type" content="website" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
