--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/png" href="/favicon1.png" />
   <title>Homebase - Task Management for Homemade</title>
   <meta name="description" content="Internal task management platform for Homemade team" />
   <meta name="author" content="Homemade" />
